--- a/.github/workflows/golang-ci.yml
+++ b/.github/workflows/golang-ci.yml
@@ -9,6 +9,7 @@ jobs:
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
+
       - name: Linting golang code
         uses: reviewdog/action-golangci-lint@v1
         with:
@@ -20,7 +21,11 @@ jobs:
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+    
       - name: Run golang tests
-        uses: reviewdog/action-test@v1
+        run: go test -v ./os/linux
         with:
           github_token: ${{ secrets.github_token }}
