--- a/.github/workflows/golang-ci.yml
+++ b/.github/workflows/golang-ci.yml
@@ -17,7 +17,9 @@ jobs:
 
   test:
     name: runner / test
-    runs-on: ubuntu-latest
+    runs-on: 
+      - ubuntu-latest
+      - macos-11
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
@@ -26,4 +28,4 @@ jobs:
         uses: actions/setup-go@v2
     
       - name: Run golang tests
-        run: go test -v ./os/linux
+        run: go test oslayer
