--- a/.github/workflows/golang-ci.yml
+++ b/.github/workflows/golang-ci.yml
@@ -15,11 +15,22 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
 
-  test:
-    name: runner / test
-    runs-on: 
-      - ubuntu-latest
-      - macos-11
+  ubuntu-test:
+    name: runner / ubuntu-test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v1
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+
+      - name: Run golang tests
+        run: go test oslayer
+
+  darwin-test:
+    name: runner / darwin-test
+    runs-on: macos-11
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
