--- a/.github/workflows/golang-ci.yml
+++ b/.github/workflows/golang-ci.yml
@@ -26,7 +26,7 @@ jobs:
         uses: actions/setup-go@v2
 
       - name: Run golang tests
-        run: go test oslayer
+        run: sudo go test oslayer
 
   darwin-test:
     name: runner / darwin-test
