--- a/.github/workflows/golang-ci.yml
+++ b/.github/workflows/golang-ci.yml
@@ -40,3 +40,16 @@ jobs:
     
       - name: Run golang tests
         run: go test oslayer
+
+  inegrational-test:
+    name: runner / inegrational-test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v1
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+
+      - name: Run integrational tests
+        run: sudo ./integration-test.sh
