--- a/.github/workflows/golang-ci.yml
+++ b/.github/workflows/golang-ci.yml
@@ -15,9 +15,22 @@ jobs:
         with:
           github_token: ${{ secrets.github_token }}
 
-  ubuntu-test:
-    name: runner / ubuntu-test
+  ubuntu-latest-test:
+    name: runner / ubuntu-latest-test
     runs-on: ubuntu-latest
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v1
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+
+      - name: Run golang tests
+        run: sudo go test -race -count 10 oslayer
+
+  ubuntu-18.04-test:
+    name: runner / ubuntu-18.04-test
+    runs-on: ubuntu-18.04
     steps:
       - name: Check out code into the Go module directory
         uses: actions/checkout@v1
@@ -41,8 +54,8 @@ jobs:
       - name: Run golang tests
         run: go test -race -count 10 oslayer
 
-  inegrational-test:
-    name: runner / inegrational-test
+  integration-test-ubuntu-latest:
+    name: runner / integration-test-ubuntu-latest
     runs-on: ubuntu-latest
     steps:
       - name: Check out code into the Go module directory
@@ -52,4 +65,30 @@ jobs:
         uses: actions/setup-go@v2
 
       - name: Run integrational tests
-        run: sudo ./integration-test.sh
+        run: ./integration-test.sh
+
+  integration-test-ubuntu-18.04:
+    name: runner / integration-test-ubuntu-18.04
+    runs-on: ubuntu-18.04
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v1
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+
+      - name: Run integrational tests
+        run: ./integration-test.sh
+  
+  integration-test-darwin:
+    name: runner / integration-test-darwin
+    runs-on: macos-11
+    steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v1
+
+      - name: Set up Go
+        uses: actions/setup-go@v2
+
+      - name: Run integrational tests
+        run: ./integration-test.sh
