--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -16,5 +16,5 @@ jobs:
     - name: Create release
       id: create_release
       uses: actions/create-release@v1
-      with:
-        github_token: ${{ secrets.github_token }}
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
