--- a/.github/workflows/go-build-binary.yml
+++ b/.github/workflows/go-build-binary.yml
@@ -15,10 +15,26 @@ jobs:
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2
 
-    - name: Build binary
+    - name: Build server binary
       uses: wangyoucao577/go-release-action@master
       with:
-        github_token: ${{ secrets.github_token }}
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         goos: ${{ matrix.goos }}
         goarch: ${{ matrix.goarch }}
-        goversion: 1.16
+        goversion: "https://dl.google.com/go/go1.16.0.linux-amd64.tar.gz"
+        project_path: "."
+        binary_name: "service-monitor"
+        extra_files: LICENSE README.md
+
+    - name: Build client binary
+      uses: wangyoucao577/go-release-action@master
+      with:
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        goos: ${{ matrix.goos }}
+        goarch: ${{ matrix.goarch }}
+        goversion: "https://dl.google.com/go/go1.16.0.linux-amd64.tar.gz"
+        project_path: "./client"
+        binary_name: "client"
+        extra_files: LICENSE README.md
