--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -6,15 +6,19 @@ on:
     branches: [ main ]
 
 jobs:
-  create-release:
-    name: Create release
+  build:
+    name: Create Release
     runs-on: ubuntu-latest
     steps:
-    - name: Check out code into the Go module directory
-      uses: actions/checkout@v2
-
-    - name: Create release
-      id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Checkout Go code
+        uses: actions/checkout@v2
+      - name: Create Application Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: Release ${{ github.ref }}
+          draft: false
+          prerelease: false
