--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -3,7 +3,8 @@ name: new-release
 
 on:
   push:
-    branches: [ main ]
+    tags:
+     - 'v*'
 
 jobs:
   build:
@@ -18,6 +19,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
+          tag_name: ${{ github.ref }}
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
