--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -23,3 +23,23 @@ jobs:
           release_name: Release ${{ github.ref }}
           draft: false
           prerelease: false
+      - name: Build server binary
+        uses: wangyoucao577/go-release-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          goos: ${{ matrix.goos }}
+          goarch: ${{ matrix.goarch }}
+          goversion: "https://dl.google.com/go/go1.16.0.linux-amd64.tar.gz"
+          project_path: "."
+          binary_name: "service-monitor"
+          extra_files: LICENSE README.md
+      - name: Build client binary
+        uses: wangyoucao577/go-release-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          goos: ${{ matrix.goos }}
+          goarch: ${{ matrix.goarch }}
+          goversion: "https://dl.google.com/go/go1.16.0.linux-amd64.tar.gz"
+          project_path: "./client"
+          binary_name: "client"
+          extra_files: LICENSE README.md
